starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__emit_raise_runtime__tests__emit_no_args.snap
---
source: starstream-compiler/src/parser/expression/primary/emit_raise_runtime.rs
description: "Code:\n\n// Emit ping\nemit Ping()\n"
---
Spanned {
    node: Emit {
        callee: Spanned {
            node: ScopedName(
                [
                    Identifier {
                        name: "Ping",
                        span: 18..22,
                    },
                ],
            ),
            span: 18..22,
        },
        args: [],
    },
    span: 13..25,
}
