starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__emit_raise_runtime__tests__raise_call.snap
---
source: starstream-compiler/src/parser/expression/primary/emit_raise_runtime.rs
description: "Code:\n\nraise blockHeight()"
---
Spanned {
    node: Raise {
        callee: Spanned {
            node: ScopedName(
                [
                    Identifier {
                        name: "blockHeight",
                        span: 6..17,
                    },
                ],
            ),
            span: 6..17,
        },
        args: [],
    },
    span: 0..19,
}
